--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 dependencies {
     testImplementation (
             'org.junit.jupiter:junit-jupiter:5.10.0',
-            'org.slf4j:slf4j-simple:2.0.7',
+            'org.slf4j:slf4j-simple:2.0.7'
     )
 }
 
