--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,32 @@
 plugins {
     id 'java-library'
+    id 'io.freefair.lombok' version "8.2.0"
+    id 'io.qameta.allure' version '2.12.0'
 }
 
 repositories {
     mavenCentral()
 }
 
+allure {
+    report {
+        version.set("2.29.0")  // Версия Allure  (берем с https://github.com/allure-framework/allure2)
+    }
+    adapter {  // отвечает за появление build/allure-results
+        aspectjWeaver.set(true)  //обработка аннотации @Step
+        frameworks {
+            junit5 {  // название фреймворка, типа TestNG, Junit4
+                adapterVersion.set("2.29.1")  // Версия адаптера для Allure для JUnit 5
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation (
             'io.rest-assured:rest-assured:5.5.2',
+            'io.rest-assured:json-schema-validator:5.5.6',
+            'io.qameta.allure:allure-rest-assured:2.29.1',
             'org.junit.jupiter:junit-jupiter:5.10.0',
             'org.slf4j:slf4j-simple:2.0.7'
     )
